🚀 new version with more categories

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -189,6 +189,7 @@
   </div>
 
   <!-- Include extension JS -->
-  <script src="content.js"></script>
+  <script src="../categories.js"></script>
+  <script src="../content.js"></script>
 </body>
 </html>
